# crates/sdkwork-routes-deploy-backend-api/src/paths.rs
@@ -40,7 +40,5 @@ pub const APP_TEMPLATE_VERSION: &str =
     "/backend/v3/api/app_templates/{templateUuid}/versions/{versionUuid}";
 pub const TEMPLATE_PURCHASES: &str = "/backend/v3/api/template_purchases";
 pub const TEMPLATE_PURCHASE: &str = "/backend/v3/api/template_purchases/{purchaseUuid}";
-pub const TEMPLATE_PURCHASE_SETTLE: &str =
-    "/backend/v3/api/template_purchases/{purchaseUuid}/settle";
 pub const TEMPLATE_PURCHASE_REVOKE: &str =
     "/backend/v3/api/template_purchases/{purchaseUuid}/revoke";
